fixed some previous changes, also added align-items: center to container divs

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,12 +1,13 @@
 .card-results {
   overflow: hidden;
   height: 120px;
-  width: 360px;
+  width: 100%;
   background: #950101;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   color: white;
   justify-content: space-between;
+  opacity: 0.8;
 }
 
 .card-results img {
@@ -16,15 +17,29 @@
   border-radius: 5px;
 }
 
-.card-results-infos h1 p {
-  padding: 10px;
-  font-size: 16px;
+.card-results-infos, h1 {
+  padding: 5px;
+  font-size: 20px;
   font-weight: bold;
   text-shadow: 1px 1px 2px black;
+  text-align: center;
+}
+
+.card-results-infos, p {
+  font-size: 10px;
+  text-align: left;
+  font-weight: lighter;
 }
 
 .card-results-infos {
   width: 120px;
+  flex-grow: 2;
+}
+
+.card-results {
+  width: 100%;
+  border-radius: 5px;
+  margin: 5px;
 }
 
 .percentage {
@@ -38,4 +53,30 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
+}
+
+.results-img {
+  object-fit: contain;
+  height: 240px;
+}
+
+#back_to_groups {
+  display: block;
+  width: 150px;
+  padding: 3px 5px;
+  box-shadow:
+    -1px -1px 5px #EEEEEE
+    -1px 1px 5px #EEEEEE,
+    1px -1px 5px #EEEEEE,
+    1px 1px 5px #EEEEEE;
+}
+
+#back_to_groups:hover {
+  text-decoration: none;
+  color: white;
+  box-shadow:
+    -1px -1px 9px #EEEEEE,
+    -1px 1px 9px #EEEEEE,
+    1px -1px 9px #EEEEEE,
+    1px 1px 9px #EEEEEE;
 }
