--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -26,6 +26,7 @@ div.groups {
   margin: 0 auto;
   margin-top: 50px;
   margin-bottom: 50px;
+  align-items: center;
 }
 
 i.fas {
